--- a/assets/home.css
+++ b/assets/home.css
@@ -14,6 +14,7 @@ body {
     justify-content: center;
     min-height: 100vh;
     padding: 20px;
+    
 }
 
 header {
@@ -45,21 +46,22 @@ header img {
 
 nav {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    gap: 10px;
-    margin: 20px 0;
+    gap: 16px;
+    /* margin: 0px 0; */
 }
+
 
 nav a {
     text-decoration: none;
-    color: #b9b9b9;
+    color: #000000;
     display: flex;
     text-align: center;
 }
 
 nav a:hover {
-    background: #b700ff;
+    background: #00ff00;
     color: white;
 }
 
@@ -74,9 +76,6 @@ section {
 }
 
 
-
-
-
 input, textarea {
     width: 100%;
     padding: 10px;
@@ -84,10 +83,6 @@ input, textarea {
     border: 1px solid #ccc;
     border-radius: 5px;
 }
-
-
-
-
 
 footer {
     margin-top: 30px;
