--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #f5f5f5;
+    background-color: #d8d8e6;
     color: #333;
     display: flex;
     flex-direction: column;
@@ -49,7 +49,7 @@ nav {
     flex-direction: row;
     align-items: center;
     gap: 16px;
-    /* margin: 0px 0; */
+    
 }
 
 
@@ -58,10 +58,11 @@ nav a {
     color: #000000;
     display: flex;
     text-align: center;
+    transition: 0.2s;
 }
 
 nav a:hover {
-    background: #00ff00;
+    background: #919cce;
     color: white;
 }
 
@@ -73,6 +74,14 @@ section {
     border-radius: 10px;
     max-width: 800px;
     text-align: justify;
+}
+
+section h2 {
+    padding: 10px;
+}
+section p {
+    padding: 10px;
+
 }
 
 
