--- a/card/assets/card.css
+++ b/card/assets/card.css
@@ -10,14 +10,14 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background:#32044e
+    background:#04054e
 }
 
 .card {
     width: 100%;
     max-width: 400px;
     text-align: center;
-    background: rgba(83, 53, 155, 0.5);
+    background: rgba(53, 68, 155, 0.5);
     padding: 20px;
     border-radius: 15px;
     backdrop-filter: blur(10px);
@@ -30,7 +30,7 @@ body {
     border-radius: 50%;
     margin-bottom: 20px;
     object-fit: cover;
-    border: 2px solid rgb(49, 25, 65);
+    border: 2px solid rgb(28, 25, 65);
   }
 
 .card h1 {
@@ -55,7 +55,7 @@ body {
     text-decoration: none;
     padding: 15px;
     margin: 8px 0;
-    background: #e4c9fd;
+    background: #d1ecf8;
     color: #05012c;
     border-radius: 10px;
     transition: 0.3s ease;
