--- a/battlefield-table/assets/style.css
+++ b/battlefield-table/assets/style.css
@@ -7,8 +7,8 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
+    
 }
-
 
 
 header {
@@ -48,5 +48,19 @@ nav ul li a {
 .banner h1 {
     font-size: 48px;
     text-shadow: 2px 4px 16px rgba(5, 5, 24, 0.8);
+
+}
+
+section {
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr;
+    /* gap: 16px; */
+}
+.grid {
+    
+    background-color: blue;
+    height: 350px;
+    margin: 8px;
+    width: 400px;
 
 }
