--- a/podcast/assets/css/style.css
+++ b/podcast/assets/css/style.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
+    color: aliceblue;
 }
 
 body {
@@ -28,8 +28,8 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    background: rgb(8,13,32);
-background: linear-gradient(356deg, rgba(8,13,32,0.865983893557423) 0%, rgba(80,83,97,0.835171568627451) 70%, rgba(143,142,150,0.8183648459383753) 100%);
+    background: rgb(36,36,36);
+    background: linear-gradient(3deg, rgba(36,36,36,1) 0%, rgba(105,105,105,1) 45%, rgba(189,190,191,1) 75%);
 }
 
 header img {
@@ -45,9 +45,8 @@ header div.title {
 
 main {
     grid-area: main;  
-    background: rgb(8,13,32);
-background: linear-gradient(356deg, rgba(8,13,32,0.865983893557423) 0%, rgba(80,83,97,0.835171568627451) 70%, rgba(143,142,150,0.8183648459383753) 100%);
-
+    background: rgb(69,68,68);
+background: linear-gradient(180deg, rgba(69,68,68,1) 0%, rgba(40,40,40,1) 7%, rgba(23,23,23,1) 27%);
 }
 
 section.episodios {
@@ -59,11 +58,11 @@ main section div.ep {
     flex-direction: row;
     font-size: 20px;
     padding: 24px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgb(131, 125, 125);
 }
 
 div.ep:hover {
-    background: rgba(65, 62, 62, 0.5)
+    background: rgba(131, 125, 125, 2)
 }
 main section div.ep div.descricoes {
     padding: 16px;
