--- a/podcast/assets/css/style.css
+++ b/podcast/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 
 * {
     margin: 0;
@@ -12,7 +12,7 @@ body {
     grid-template-areas: "nav" "header" "main" "footer";
     grid-template-rows: 80px 250px 1fr 80px;
     height: 100vh;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Quicksand', sans-serif;
 }
 
 
@@ -39,37 +39,64 @@ header img {
 }
 
 header div.title {
-    font-size: 30px
+    font-size: 20px
     
 }
 
 main {
     grid-area: main;  
     background: rgb(69,68,68);
-background: linear-gradient(180deg, rgba(69,68,68,1) 0%, rgba(40,40,40,1) 7%, rgba(23,23,23,1) 27%);
+    background: linear-gradient(180deg, rgba(69,68,68,1) 0%, rgba(40,40,40,1) 7%, rgb(12, 12, 12) 27%);
+
 }
 
 section.episodios {
     padding: 24px;
 }
 
+section img{
+    width: 120px;
+    height: 120px;
+    border-radius: 8px;
+}
+
 main section div.ep {
     display: flex;
     flex-direction: row;
-    font-size: 20px;
     padding: 24px;
-    border-bottom: 1px solid rgb(131, 125, 125);
+    border-bottom: 2px solid rgb(66, 66, 66);
 }
 
 div.ep:hover {
-    background: rgba(131, 125, 125, 2)
+    background: rgb(65, 65, 65);
+
 }
 main section div.ep div.descricoes {
-    padding: 16px;
+    padding: 4px 16px;
+}
+main section div.ep div.descricoes h3 {
+    padding-bottom: 4px;
+}
+
+main section div.ep div.descricoes p {
+    padding-bottom: 16px;
+    color: #B3B3B3;
+}
+.icon-text {
+    display: flex;
 }
 
 footer {
     grid-area: footer;
     background-color: red;
 
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 150,
+  'GRAD' 0,
+  'opsz' 24;
+  color: #fc7d7d;
 }
