--- a/podcast/assets/css/style.css
+++ b/podcast/assets/css/style.css
@@ -33,8 +33,11 @@ header {
     flex-direction: row;
     align-items: center;
     background: 
-         linear-gradient(180deg, rgba(177, 201, 211, 0.384) 0%, rgba(40, 40, 40, 0.534) 44%, rgb(24, 24, 24) 70%, rgba(0, 0, 0, 0.753) 93%), 
-         url('../img/sp.jpeg') center/cover;
+         linear-gradient(180deg, rgba(177, 201, 211, 0.253) 0%, rgba(40, 40, 40, 0.253) 44%, rgba(24, 24, 24, 0.315) 70%, rgba(0, 0, 0, 0.432) 93%), 
+         url('../img/sp.jpeg') center/contain;
+         background-size: 500px;
+         /* background-repeat: no-repeat; */
+
 }
 
 
