--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 body {
@@ -22,7 +22,7 @@ header {
     margin-bottom: 30px;
     position: relative;
     width: 100%;
-    max-width: 800px;
+    max-width: 1100px;
     overflow: hidden;
     border-radius: 20px;
 
@@ -38,8 +38,8 @@ header::before {
 header img {
     border-radius: 50%;
     margin-top: -60px;
-    width: 150px;
-    height: 150px;
+    width: 220px;
+    height: 220px;
     border: 2px solid rgb(255, 255, 255);
 
 }
@@ -62,17 +62,17 @@ nav a {
 }
 
 nav a:hover {
-    background: #919cce;
-    color: white;
+    background: #90a1ee;
+    color: rgb(2, 33, 80);
 }
 
 section {
     margin: 20px 0;
     padding: 20px;
     background: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.301);
     border-radius: 10px;
-    max-width: 800px;
+    max-width: 1100px;
     text-align: justify;
 }
 
