--- a/baralho/assets/css/style.css
+++ b/baralho/assets/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -11,17 +11,40 @@ body {
     flex-direction: column;
     justify-content: center;
     background-image: url('../../assets/img/joker-playing-at-poker-table-l6xh96sbhn3q7s4j.jpg');
-
-    
 }
 
-
 .card {
-    background: #23ba23;
+    background: transparent;
     width: 40vh;
     height: 65vh;
     padding: 3px;
     position: relative;
     display: flex;
-    cursor: pointer;
+    transform-style: preserve-3d; 
+    transition: transform 1s;
+}
+
+.front-card,
+.back-card {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    transition: transform 1s;
+}
+
+
+.front-card {
+    background-color: rgb(221, 215, 215);
+}
+
+
+.back-card {
+    background: url('../img/jokker.jpg') no-repeat center/cover;
+    transform: rotateY(180deg); 
+}
+
+
+.card:hover {
+    transform: rotateY(180deg);
 }
