--- a/baralho/assets/css/style.css
+++ b/baralho/assets/css/style.css
@@ -39,20 +39,24 @@ body {
     transition: transform 1s;
     border-radius: 24px;
 }
-
+                                                     
 
 .front-card {
     background-color: rgba(19, 0, 0, 0.658);
     display: grid;
-    font-size: 40px;
-    color: rgb(255, 246, 227);
-    grid-template-rows: 100px 1fr 100px;
+    font-size: 54px;
+    color: rgb(255, 231, 12);
+    grid-template-rows: 150px 1fr 150px;
 }
-
-.front-card img {
+.front-card img.jkr {
+    position: absolute;
     width: 100%;
-}
+    height: 100%;
+    border-radius: 28px;
+    opacity: 0.7;
+   
 
+}
 
 .back-card {
     background: url('../img/jokker.jpg') center/cover;
@@ -62,26 +66,36 @@ body {
 }
 
 
-
-
 .card:hover {
     transform: rotateY(180deg);
 }
 .naipe-cima{
    transform: translate(3%);
-   padding: 8px;
+   padding-top: 20px;
+   
 }
-.naipe-centro img {
-    width: 200px;
-    transform: translate(48%, 50%);
+
+.naipe-cima, .naipe-baixo span {
+    text-shadow: #FFF 0px 0px 5px, #FFF 0px 0px 10px, #FFF 0px 0px 15px, #FF2D95 0px 0px 20px, #FF2D95 0px 0px 30px, #FF2D95 0px 0px 40px, #FF2D95 0px 0px 50px, #FF2D95 0px 0px 75px, 2px -2px 3px rgb(206, 90, 55);
+    color: #FFFFFF;
 }
+/* .naipe-centro img {
+    position: absolute;
+    width:50%;
+    height: 50%;
+    opacity: 0.5;
+    border-radius: 28px;
+   transform: translate(0%, -16%); 
+} */
 .naipe-cima img, .naipe-baixo img {
     width: 40px;
     display: flex;
-    filter: invert(100%);
+    filter:invert(100%);
+    transform: translate(-5px) ;
+
 }
 
 .naipe-baixo{
     transform: translate(-3%) rotate(180deg);
-    padding: 8px;
+    padding-top: 20px;
 }
