--- a/baralho/assets/css/style.css
+++ b/baralho/assets/css/style.css
@@ -23,13 +23,24 @@ body {
     background: transparent;
     width: 40vh;
     height: 65vh;
-    padding: 3px;
     position: relative;
     display: flex;
     transform-style: preserve-3d; 
     transition: transform 1s;
+    border-radius: 24px;
+    animation: brilho 1.5s infinite alternate;
 }
-
+@keyframes brilho {
+    0% {
+        box-shadow: 0px 0 5px #fff, 0 0 10px rgb(123, 255, 0), 0 0 15px rgb(94, 255, 0);
+    }
+    50% {
+        box-shadow: 0px 0 10px #fff, 0 0 20px rgb(0, 225, 255), 0 0 35px rgb(0, 217, 255);
+    }
+    100% {
+        box-shadow: 0px 0 5px #fff, 0 0 10px rgb(255, 0, 191), 0 0 15px rgb(255, 0, 255);
+    }
+}
 .front-card,
 .back-card {
     position: absolute;
@@ -52,7 +63,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    border-radius: 28px;
+    border-radius: 24px;
     opacity: 0.7;
    
 
@@ -99,3 +110,5 @@ body {
     transform: translate(-3%) rotate(180deg);
     padding-top: 20px;
 }
+
+
