--- a/baralho/assets/css/style.css
+++ b/baralho/assets/css/style.css
@@ -64,7 +64,7 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 24px;
-    opacity: 0.7;
+    opacity: 0.8;
    
 
 }
@@ -90,20 +90,13 @@ body {
     text-shadow: #FFF 0px 0px 5px, #FFF 0px 0px 10px, #FFF 0px 0px 15px, #FF2D95 0px 0px 20px, #FF2D95 0px 0px 30px, #FF2D95 0px 0px 40px, #FF2D95 0px 0px 50px, #FF2D95 0px 0px 75px, 2px -2px 3px rgb(206, 90, 55);
     color: #FFFFFF;
 }
-/* .naipe-centro img {
-    position: absolute;
-    width:50%;
-    height: 50%;
-    opacity: 0.5;
-    border-radius: 28px;
-   transform: translate(0%, -16%); 
-} */
+
 .naipe-cima img, .naipe-baixo img {
     width: 40px;
     display: flex;
-    filter:invert(100%);
+    /* filter:invert(100%); */
     transform: translate(-5px) ;
-
+    filter: drop-shadow(2px 6px 8px rgba(37, 0, 0, 0.918));
 }
 
 .naipe-baixo{
