--- a/podcast/assets/css/style-episodios.css
+++ b/podcast/assets/css/style-episodios.css
@@ -1,35 +1,355 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Shippori+Antique+B1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=smart_display');
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: aliceblue;
 }
 
-header {
-    background-color: greenyellow;
-    width: 50%;
-    height: 100%;
+body {
+    display: grid;
+    grid-template-areas: "nav" "header" "main" "footer";
+    grid-template-rows: 5vh 250px 1fr 80px;
+    font-family: 'Quicksand', sans-serif;
+    padding: 6px;
+    background-color: black;
+    
 }
 
 nav {
-    background-color: aqua;
+    grid-area: nav;
+    background-color: rgb(43 42 42);
     width: 100%;
-    height: 100%;
+    display: flex;
+    align-items: center;
+}
+nav ul{
+    padding-left: 24px;
+    width: 100%;
+    list-style: none;
+    display: flex;
+    justify-content: flex-start;
+    font-family: "Shippori Antique B1", sans-serif;
+}
+nav ul a{
+    transition: 0.3s;
+    opacity: 0.7;
+    text-decoration: none;
+    position: relative;
+    display: block;
+    overflow: hidden;
+    margin-right: 20px;
+}
+nav ul a::before{
+    content: '';
+    width: 100%;
+    height: 2px;
+    border-radius: 10px;
+    background-color: #fff;
+    position: absolute;
+    bottom: 0px;
+    left: -100%;
+    transition: 0.2s;
+}
+nav ul a:hover{
+    opacity: 1;
+}
+nav ul a:hover::before{
+    left: 0%;
 }
 
-aside {
-    background-color: blue;
-    width: 100%;
-    height: 100%;
+header {
+    grid-area: header;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background: 
+         /* linear-gradient(180deg, rgba(177, 201, 211, 0.253) 0%, rgba(40, 40, 40, 0.253) 44%, rgba(24, 24, 24, 0.315) 70%, rgba(0, 0, 0, 0.432) 93%),  */
+         url('../img/pCatedral.jpg') center/contain;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 0 -205px;
+
 }
 
-section {
-    background-color: brown;
+
+header img {
+    height:calc(100% - 48px);
+    max-width: 250px;
+    margin: 24px;
+    border-radius: 8px;
+    -webkit-box-shadow: -7px 26px 18px 5px rgba(0,0,0,0.67);
+    -moz-box-shadow: -7px 26px 18px 5px rgba(0,0,0,0.67);
+    box-shadow: -7px 26px 18px 5px rgba(0,0,0,0.67);
+
+}
+/* header div.title span {
+    font-size: 24px;
+    font-family: "Shippori Antique B1", sans-serif;
+} */
+header div.title h1 {
+    font-family: 'Bungee Shade', sans-serif;
+    font-size: 3rem;
+    text-shadow: -7px 10px 18px rgba(0, 0, 0, 0.67);
+    margin-bottom: 10px;
+}
+header div.title p {
+    font-size: 0.9rem;
+    font-family: 'Poppins', sans-serif;
+}
+
+
+
+/* =======================================================================
+===================== SEÇÃO DO CONTEÚDO DO EP
+=============================
+========================================================================== */
+
+main {
+    grid-area: main;  
+}
+main div.nav-eps.audios h3{
+    padding: 0;
+}
+main div.nav-eps.audios {
+    background: linear-gradient(180deg, rgba(50, 50, 50, 1) 0%, rgba(40, 40, 40, 1) 64%, rgba(18, 18, 18, 1) 93%);
     width: 100%;
-    height: 100%;
+    box-shadow: 0 0 15px black;
+    
+}
+main div.nav-eps {
+    /* height: calc(100% - 55vh); */
+    padding: 24px;
+    background: rgb(50,50,50);
+    background: linear-gradient(180deg, rgba(50,50,50,1) 0%, rgba(40,40,40,1) 44%, rgba(24,24,24,1) 70%, rgba(18,18,18,1) 93%);
+}
+main div.nav-eps .join-mais {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    min-height: 50px;
+    margin-bottom: 32px;  
+}
+
+main div.nav-eps h3 {
+    font-size: 24px;
+    font-weight: 700;
+    font-family: "Shippori Antique B1", sans-serif;
+    padding-bottom: 24px;
+}
+
+
+
+main div.nav-eps div.join-mais button {
+    border-radius: 999px;
+    color: rgb(255, 255, 255);
+    padding: 8px 16px;
+    border: 1px solid rgb(145, 143, 143) ;
+    background-color: #7dedfc00;
+    font-weight: 700;
+    min-width: 110px;
+    font-size: 14px;
+    cursor: pointer;
+    margin-right: 2px;
+    -webkit-box-shadow: -2px 10px 20px 0px rgba(0,0,0,0.63);
+    -moz-box-shadow: -2px 10px 20px 0px rgba(0,0,0,0.63);
+    box-shadow: -2px 10px 20px 0px rgba(0,0,0,0.63);  
+    
+}
+main div.nav-eps div.join-mais button:hover {
+    border: 2px solid rgba(175, 159, 124, 0.555);
+    background-color: rgba(68, 68, 68, 0.582);
+    margin-right: 0;
+    -webkit-box-shadow: -6px 12px 21px 0px rgba(0,0,0,0.99);
+    -moz-box-shadow: -6px 12px 21px 0px rgba(0,0,0,0.99);
+    box-shadow: -6px 12px 21px 0px rgba(0,0,0,0.99);
+    
+  }
+main div.nav-eps div.join-mais button:active {
+    border: 1px solid rgb(105, 105, 105) ;
+    background-color: rgba(133, 113, 1, 0.233);
+    color: rgb(248, 232, 186);
+    margin-right: 2px;
+    -webkit-box-shadow: -6px 8px 9px 1px rgba(0,0,0,0.8);
+    -moz-box-shadow: -6px 8px 9px 1px rgba(0,0,0,0.8);
+    box-shadow: -6px 8px 9px 1px rgba(0,0,0,0.8);
+    
+}
+main div.nav-eps div.botoes-tag {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    margin: 32px 0px;
+}
+main div.nav-eps div.botoes-tag button{
+    border-radius: 20px;
+    border: 0;
+    color: rgb(255, 255, 255);
+    padding: 8px 14px;
+    background-color: rgba(110, 110, 110, 0.438);
+    font-weight: 500;
+    font-size: 14px;
+    cursor: pointer;
+    -webkit-box-shadow: -2px 10px 20px 0px rgba(0,0,0,0.63);
+    -moz-box-shadow: -2px 10px 20px 0px rgba(0,0,0,0.63);
+    box-shadow: -2px 10px 20px 0px rgba(0,0,0,0.63);
+    font-family: "Shippori Antique B1", sans-serif;
+}
+main div.nav-eps div.botoes-tag button:hover {
+    border-radius: 20px;
+    border: 0;
+    color: rgb(255, 255, 255);
+    padding: 8px 14px;
+    background-color: rgba(143, 143, 143, 0.438);
+    font-weight: 500;
+    font-size: 14px;
+    cursor: pointer;
+    transition: 0.2s;
+}
+main div.nav-eps div.botoes-tag button:active {
+    border-radius: 20px;
+    border: 0;
+    color: rgb(255, 255, 255);
+    padding: 8px 14px;
+    background-color: rgba(167, 167, 167, 0.589);
+    font-weight: 500;
+    font-size: 14px;
+    cursor: pointer;
+    transition: 0.1s;
+}
+
+main div.content-ep{
+    display: flex;
+    padding: 80px;
+    background: rgba(18, 18, 18, 1);
+    flex-direction: column;
+    align-items: center;
+}
+
+main div.content-ep.audios{
+    padding: 80px;
+    flex-direction: row;
+    justify-content: space-between;
+    box-shadow: 0px 20px 15px -17px inset black;
+}
+main div.content-ep.audios .audio{
+    width: 100%;
+}
+main div.content-ep.audios .audio audio{
+    width: 90%;
+}
+main div.content-ep .audio h4{
+    margin-bottom: 20px;
+
+}
+
+main iframe{
+    width: 100%;
+    height: 700px;
+}
+
+
+section.episodios {
+    padding: 12px;
+    background: rgba(18, 18, 18, 1);
+    /* height: calc(100% - 25vh); */
+}
+section img{
+    width: 140px;
+    height: 140px;
+    border-radius: 8px;
+}
+
+main section div.ep {
+    display: flex;
+    flex-direction: row;
+    padding: 12px;
+    border-top: 1.5px solid rgb(66, 66, 66);
+    align-items: center;
+}
+
+div.ep:hover {
+    background: rgb(65, 65, 65);
+
+}
+main section div.ep div.descricoes {
+    padding: 4px 16px;
+}
+main section div.ep div.descricoes h3 {
+    padding-bottom: 4px;
+    font-size: 16px;
+}
+
+main section div.ep div.descricoes p {
+    padding-bottom: 16px;
+    font-size: 14px;
+    color: #B3B3B3;
+}
+main section div.ep div.descricoes span.resumo {
+    font-size: 14px;
+    color: #B3B3B3;
+    padding-bottom: 4px;
+    font-family: "Shippori Antique B1", sans-serif;
+    font-weight: 500;
+}
+main section div.ep div.descricoes span.data {
+    font-size: 14px;
+    padding: 16px 0;
+    display: flex;
+    font-family: "Shippori Antique B1", sans-serif;
+    font-weight: 600;
 }
 
 footer {
-    background-color: red;
-    width: 100%;
-    height: 100%;
+    grid-area: footer;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(18, 18, 18, 1) 100%);
+    display: grid;
+    justify-items: center;
+    align-content: center;
+    padding: 60px 0 70px;
+    padding: 50px;
+    text-align: center;
+}
+
+@media (max-width: 1000px) and (min-width: 801px){
+    header{
+        background-position: 0 -150px;
+    }
+    main iframe{
+        height: 500px;
+    }
+    main div.content-ep.audios{
+        padding: 50px;
+    }
+    main div.content-ep{
+        padding: 0 40px 50px 40px;
+    }
+}
+
+
+@media (max-width: 800px){
+    header{
+        background-position: 0 -105px;
+    }
+    header div.title h1{
+        font-size: 35px;
+    }
+    header div.title p{
+        font-size: 15px;
+    }
+    main iframe{
+        height: 400px;
+    }
+    main div.content-ep.audios{
+        padding: 50px;
+    }
+    main div.content-ep{
+        padding: 0 40px 50px 40px;
+    }
 }
