--- a/podcast/assets/css/style.css
+++ b/podcast/assets/css/style.css
@@ -25,6 +25,43 @@ body {
 nav {
     grid-area: nav;
     background-color: rgb(44, 87, 87);
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+nav ul{
+    padding-left: 24px;
+    width: 100%;
+    list-style: none;
+    display: flex;
+    justify-content: flex-start;
+    font-family: "Shippori Antique B1", sans-serif;
+}
+nav ul a{
+    transition: 0.3s;
+    opacity: 0.7;
+    text-decoration: none;
+    position: relative;
+    display: block;
+    overflow: hidden;
+    margin-right: 20px;
+}
+nav ul a::before{
+    content: '';
+    width: 100%;
+    height: 2px;
+    border-radius: 10px;
+    background-color: #fff;
+    position: absolute;
+    bottom: 0px;
+    left: -100%;
+    transition: 0.2s;
+}
+nav ul a:hover{
+    opacity: 1;
+}
+nav ul a:hover::before{
+    left: 0%;
 }
 
 header {
@@ -57,7 +94,8 @@ header div.title span {
 }
 header div.title h1 {
     font-family: 'Bungee Shade', sans-serif;
-    font-size: 96px;    
+    font-size: 96px;  
+    text-shadow: -7px 10px 18px rgba(0, 0, 0, 0.67);  
 }
 header div.title p {
     font-size: 14px;
@@ -197,6 +235,7 @@ main section div.ep {
     flex-direction: row;
     padding: 12px;
     border-top: 1.5px solid rgb(66, 66, 66);
+    align-items: center;
 }
 
 div.ep:hover {
@@ -242,7 +281,13 @@ main section div.ep div.descricoes div.icon-text span.material-symbols-outlined 
 
 footer {
     grid-area: footer;
-    background-color: rgb(44, 87, 87);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(18, 18, 18, 1) 100%);
+    display: grid;
+    justify-items: center;
+    align-content: center;
+    padding: 60px 0 70px;
+    padding: 50px;
+    text-align: center;
 
 }
 
@@ -253,4 +298,31 @@ footer {
   'GRAD' 0,
   'opsz' 24;
   color: #fc7d7d;
+}
+@media (max-width: 1000px) and (min-width: 801px){
+    header{
+        background-position: 0 -150px;
+    }
+}
+
+
+@media (max-width: 800px) and (min-width: 574px) {
+    header{
+        background-position: 0 -105px;
+    }
+    header div.title h1{
+        font-size: 55px;
+    }
+    header div.title p{
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 573px){
+    header{
+        background-position: 0 -45px;
+    }
+    header div.title h1{
+        font-size: 35px;
+    }
 }
