--- a/battlefield-table/assets/style.css
+++ b/battlefield-table/assets/style.css
@@ -25,6 +25,7 @@ header {
 
 header nav ul {
     list-style: none;
+    padding: 12px;
 }
 
 header nav ul li {
@@ -35,6 +36,8 @@ header nav ul li a {
     color: #fff;
     text-decoration: none;
     font-weight: bold;
+    padding: 8px;
+   
 }
 div.section-banner {
     grid-area: banner1;
