--- a/blog/assets/css/styles.css
+++ b/blog/assets/css/styles.css
@@ -1,29 +1,40 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
-    color: #333;
-    max-width: 800px;
-    margin: auto;
-    padding: 20px;
-  }
-  h1,
-  h2,
-  h3 {
-    color: #2c3e50;
-  }
-  pre {
-    background-color: #f4f4f4;
-    padding: 10px;
-    overflow-x: auto;
-    border-left: 4px solid #3498db;
-  }
-  code {
-    font-family: monospace;
-  }
-  a {
-    color: #3498db;
-    text-decoration: none;
-  }
-  a:hover {
-    text-decoration: underline;
-  }
+  background-color: #121212;
+  color: #f0f0f0;
+  scroll-behavior: smooth;
+  
+}
+
+.navbar, footer {
+  background-color: #1f1f1f;
+}
+
+.navbar-brand, .nav-link, footer small {
+  color: #b388ff !important;
+}
+
+.nav-link:hover {
+  color: #d1b3ff !important;
+}
+
+h1, h2, h3 {
+  color: #b388ff;
+}
+
+section p{
+  color: #e0e0e0;
+}
+
+pre {
+  background-color: #1e1e2f;
+  color: #e0e0e0;
+}
+
+a {
+  color: #b388ff;
+  text-decoration: underline;
+}
+
+a:hover {
+  color: #d1b3ff;
+}
