--- a/cafeteria/assets/css/styles.css
+++ b/cafeteria/assets/css/styles.css
@@ -65,3 +65,28 @@ body {
     background-color: #ffe8d6;
   }
   
+  
+::-webkit-scrollbar {
+  width: 6px; 
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(176, 138, 106, 0.7); 
+  border-radius: 10px;
+  transition: background-color 0.3s;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(176, 138, 106, 1);
+}
+
+/* navegador Firefox  */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(176, 138, 106, 0.7) transparent;
+}
+
