--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -48,7 +48,8 @@ main img {
     position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 500px;
+    /* width: 500px; */
+    aspect-ratio: 1/1;
     height: 470px;
     border-radius: 50%;
     border: 3px solid white;
