--- a/battlefield-table/assets/style.css
+++ b/battlefield-table/assets/style.css
@@ -72,7 +72,7 @@ section.videos {
 section.videos .linha-1 {
     width: 1400px;
     height: 470px;
-    background: red;
+    /* background: red; */
     display: flex;  
     flex-direction: row;
     justify-content: space-between;
@@ -136,7 +136,7 @@ section.videos .links-yt {
 section.videos .linha-2 {
     width: 1400px;
     height: 470px;
-    background: rgb(255, 145, 0);
+    /* background: rgb(255, 145, 0); */
     display: flex;  
     flex-direction: row;
     justify-content: space-between;
